--- a/infra/k8s/04-api/03-api-deployment.yaml
+++ b/infra/k8s/04-api/03-api-deployment.yaml
@@ -45,6 +45,18 @@ spec:
           ports:
             - containerPort: 8000
             - containerPort: 8001
+          readinessProbe:
+            httpGet:
+              path: /
+              port: 8001
+            initialDelaySeconds: 5
+            periodSeconds: 5
+          livenessProbe:
+            httpGet:
+              path: /
+              port: 8001
+            initialDelaySeconds: 15
+            periodSeconds: 20
           resources: {}
       restartPolicy: Always
       serviceAccountName: ""
