--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,8 @@ services:
       - MYSQL_PASS=root
     depends_on:
       - mysqldb-customers
+    ports:
+      - 8081:8081
 
   mysqldb-visits:
     image: mysql:8.0
@@ -44,6 +46,8 @@ services:
       - MYSQL_PASS=root
     depends_on:
       - mysqldb-visits
+    ports:
+      - 8082:8082
 
   mysqldb-vets:
     image: mysql:8.0
@@ -66,7 +70,9 @@ services:
       - MYSQL_PASS=root
     depends_on:
       - mysqldb-vets
-
+    ports:
+      - 8083:8083
+      
   kong:
     image: kong
     container_name: kong
@@ -83,6 +89,7 @@ services:
       - customers-svc
     ports:
       - 8000:8000
+      - 8001:8001
 
   configure-kong:
     build:
