--- a/infra/k8s/03-backend/05-app-vets-deployment.yaml
+++ b/infra/k8s/03-backend/05-app-vets-deployment.yaml
@@ -38,6 +38,18 @@ spec:
             value: root
         ports:
           - containerPort: 8083
+        readinessProbe:
+          httpGet:
+            path: /actuator/health
+            port: 8083
+          initialDelaySeconds: 5
+          periodSeconds: 5
+        livenessProbe:
+          httpGet:
+            path: /actuator/health
+            port: 8083
+          initialDelaySeconds: 15
+          periodSeconds: 20
         resources: {}
       restartPolicy: Always
       serviceAccountName: ""
