--- a/infra/k8s/05-frontend/01-frontend-deployment.yaml
+++ b/infra/k8s/05-frontend/01-frontend-deployment.yaml
@@ -31,7 +31,10 @@ spec:
                 name: app-configmap
                 key: TZ
           - name: APP_API
-            value: "http://springapi.eastus.cloudapp.azure.com:8000/"
+            valueFrom:
+              configMapKeyRef:
+                name: app-configmap
+                key: APP_API
         ports:
           - containerPort: 8080
         readinessProbe:
