--- a/infra/k8s/03-backend/05-app-vets-deployment.yaml
+++ b/infra/k8s/03-backend/05-app-vets-deployment.yaml
@@ -31,11 +31,20 @@ spec:
                 name: app-configmap
                 key: TZ
           - name: MYSQL_URL
-            value: jdbc:mysql://mysqldb-vets/vets
+            valueFrom:
+              configMapKeyRef:
+                name: app-vets-configmap
+                key: MYSQL_URL
           - name: MYSQL_USER
-            value: root
+            valueFrom:
+              configMapKeyRef:
+                name: app-configmap
+                key: MYSQL_USER
           - name: MYSQL_PASS
-            value: root
+            valueFrom:
+              configMapKeyRef:
+                name: app-configmap
+                key: MYSQL_PASS
         ports:
           - containerPort: 8083
         readinessProbe:
