--- a/infra/k8s/03-backend/01-app-customers-deployment.yaml
+++ b/infra/k8s/03-backend/01-app-customers-deployment.yaml
@@ -21,7 +21,7 @@ spec:
         app: app-customers
     spec:
       containers:
-      - image: aulainfraacr.azurecr.io/customers
+      - image: testemicroservicesacr.azurecr.io/customers
         imagePullPolicy: Always
         name: backend-customers
         env:
