--- a/infra/k8s/03-backend/05-app-vets-deployment.yaml
+++ b/infra/k8s/03-backend/05-app-vets-deployment.yaml
@@ -21,7 +21,7 @@ spec:
         app: app-vets
     spec:
       containers:
-      - image: aulainfraacr.azurecr.io/vets
+      - image: testemicroservicesacr.azurecr.io/vets
         imagePullPolicy: Always
         name: backend-vets
         env:
