--- a/infra/k8s/05-frontend/01-frontend-deployment.yaml
+++ b/infra/k8s/05-frontend/01-frontend-deployment.yaml
@@ -21,7 +21,7 @@ spec:
         app: frontend
     spec:
       containers:
-      - image: aulainfraacr.azurecr.io/frontend
+      - image: testemicroservicesacr.azurecr.io/frontend
         imagePullPolicy: Always
         name: frontend
         env:
