--- a/infra/k8s/06-kong/configure.yaml
+++ b/infra/k8s/06-kong/configure.yaml
@@ -7,6 +7,6 @@ metadata:
   namespace: aulainfra
 spec:
   containers:
-  - image: aulainfraacr.azurecr.io/configure-kong
+  - image: testemicroservicesacr.azurecr.io/configure-kong
     name: configure-kong
   restartPolicy: OnFailure
