--- a/infra/k8s/03-backend/03-app-visits-deployment.yaml
+++ b/infra/k8s/03-backend/03-app-visits-deployment.yaml
@@ -21,7 +21,7 @@ spec:
         app: app-visits
     spec:
       containers:
-      - image: aulainfraacr.azurecr.io/visits
+      - image: testemicroservicesacr.azurecr.io/visits
         imagePullPolicy: Always
         name: backend-visits
         env:
