--- a/infra/k8s/01-config/04-app-visits-configmap.yaml
+++ b/infra/k8s/01-config/04-app-visits-configmap.yaml
@@ -4,4 +4,4 @@ metadata:
   name: app-visits-configmap
   namespace: aulainfra
 data:
-  MYSQL_URL: jdbc:mysql://mysqldb-customers/customers
+  MYSQL_URL: jdbc:mysql://mysqldb-visits/visits
