--- a/infra/k8s/01-config/05-app-vets-configmap.yaml
+++ b/infra/k8s/01-config/05-app-vets-configmap.yaml
@@ -4,4 +4,4 @@ metadata:
   name: app-vets-configmap
   namespace: aulainfra
 data:
-  MYSQL_URL: jdbc:mysql://mysqldb-customers/customers
+  MYSQL_URL: jdbc:mysql://mysqldb-vets/vets
