--- a/infra/k8s/01-config/02-app-configmap.yaml
+++ b/infra/k8s/01-config/02-app-configmap.yaml
@@ -7,4 +7,4 @@ data:
   TZ: "America/Sao_Paulo"
   MYSQL_USER: root
   MYSQL_PASS: root
-  APP_API: "http://springapi.eastus.cloudapp.azure.com:8000/"
+  APP_API: "http://springapi.westus.cloudapp.azure.com:8000/"
